# unslothkit

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: beginner_problem.md  recipe_request.md
.github/workflows/: ci.yml
docs/: AGENT_NATIVE.md  AGENT_QUICKSTART.md  COPY_PASTE_PROMPTS.md  LAUNCH_POST.md  UNSLOTH_COMMUNITY.md  UNSLOTH_COMPATIBILITY.md
examples/: README.md  chat_sample.jsonl
finetunekit/: __init__.py  cli.py  data.py  recommend.py  templates.py
pi/extensions/: finetunekit.ts  unslothkit.ts
scripts/: install-agent-integrations.sh  install-cli.sh
skills/finetune-open-models/: SKILL.md
skills/unsloth-finetune/: SKILL.md
tests/: test_data.py
unslothkit/: __init__.py  cli.py  data.py  doctor.py  recommend.py  templates.py
