[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unslothkit"
version = "0.1.0"
description = "Beginner-friendly CLI for Unsloth fine-tuning projects"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "UnslothKit contributors"}]
dependencies = []
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/gvkhosla/unslothkit"
Repository = "https://github.com/gvkhosla/unslothkit"
Issues = "https://github.com/gvkhosla/unslothkit/issues"
Unsloth = "https://github.com/unslothai/unsloth"

[project.optional-dependencies]
train = [
  "unsloth",
  "datasets",
  "transformers",
  "trl",
  "accelerate",
]
dev = ["pytest"]

[project.scripts]
unslothkit = "unslothkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["unslothkit*"]
